headlamp/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  selector:
    app: headlamp
  ports:
    - name: http
      port: 80
      targetPort: http
