headlamp/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: headlamp
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.meinedomain.de
      secretName: headlamp-tls
  rules:
    - host: headlamp.meinedomain.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
